<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:id="@+id/text_consignee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="14sp"
                android:text="@string/consignee_text"
                android:textColor="@color/order_key" />

            <EditText
                android:id="@+id/edit_consignee"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:hint="@string/consignee_text_hint"
                android:textColor="@color/regis_account_exist"
                android:layout_toRightOf="@id/text_consignee"
                android:background="@color/white"
                android:singleLine="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/content_bg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:id="@+id/text_phone_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/phone_text"
                android:textSize="14sp"
                android:textColor="@color/order_key" />

            <EditText
                android:id="@+id/edit_phone_num"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:textSize="14sp"
                android:hint="@string/consignee_tel_hint"
                android:textColor="@color/regis_account_exist"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/text_phone_num"
                android:background="@color/white"
                android:inputType="phone"
                android:maxLength="11"
                android:singleLine="true" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/content_bg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:id="@+id/text_adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textSize="14sp"
                android:text="@string/address_text"
                android:textColor="@color/order_key" />
            <ImageView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_right_arrow"/>

            <EditText
                android:id="@+id/edit_adress"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:hint="@string/selset_birthday"
                android:textColorHint="@color/regis_account_exist"
                android:textColor="@color/regis_account_exist"
                android:layout_toRightOf="@id/text_adress"
                android:layout_toLeftOf="@id/more"
                android:background="@color/white"
                android:singleLine="true"
                android:focusable="false"
                android:cursorVisible="false"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/content_bg" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" >

            <TextView
                android:id="@+id/text_detail_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/detail_address"
                android:textSize="14sp"
                android:textColor="@color/order_key" />

            <EditText
                android:id="@+id/edit_detail_address"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:textSize="14sp"
                android:hint="@string/consignee_detail_hint"
                android:textColor="@color/regis_account_exist"
                android:layout_toRightOf="@id/text_detail_address"
                android:background="@color/white"
                android:singleLine="true" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>